# toon

./: .gitignore  BENCHMARKS.md  CALZONE-system-prompt.md  CALZONE_README.md  CALZOON-README.md  CALZOON-SPEC.md  README-feature-schema.md  README.md  RESEARCH_ANALYSIS.md  SKILL.md  SPEC.md  automd.config.ts  commitlint.config.ts  eslint.config.mjs  eslint.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml
.github/workflows/: ci.yml  deploy.yml  pr-title.yml  release.yml
analytics/: README.md  TESTING.md  enhanced-monitor.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
benchmarks/: .env.example  README.md  package.json
codelens-toon/: .gitignore  README.md  TESTING.md  package.json  tsconfig.json
conformance/: README.md  cli.mjs  implementation-summary.md  optimization-summary.md  package.json  tsconfig.json
docs/: index.md  package.json  playground.md  semi-uniform-normalization-proposal.md  uno.config.ts  vitest.config.ts  wrangler.toml
docs/cli/: index.md
examples/: data-mode.calzoon  hybrid-mode.calzoon  plan-mode.calzoon
python/: .gitignore  README.md  pyproject.toml
python/pytoon/: __init__.py  cli.py  constants.py  literal_utils.py  normalize.py  stats.py  string_utils.py  types.py  validation_utils.py
python/pytoon/decode/: __init__.py  decoders.py  expand.py  parser.py  scanner.py  validation.py
python/pytoon/encode/: __init__.py  core.py  folding.py  primitives.py  writer.py
python/tests/: test_primitives.py  test_roundtrip.py
(+121 files in other folders)
